cluster/jaeger/http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger
  namespace: observability
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
  hostnames:
    - "jaeger.bergtobias.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jaeger-query
          port: 16686
