cluster/jaeger/security-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingress-lan-only
  namespace: istio-system
spec:
  targetRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gateway-istio
  action: ALLOW
  rules:
  - from:
    - source:
        ipBlocks:
          - 192.168.0.0/16
